%%{init: {"theme":"neutral"}}%%
erDiagram
    DIM_DATE        ||--o{ FAIT_VENTES : "cle_date"
    DIM_PRODUIT     ||--o{ FAIT_VENTES : "cle_produit"
    DIM_CLIENT      ||--o{ FAIT_VENTES : "cle_client (SCD2)"
    DIM_EMPLOYE     ||--o{ FAIT_VENTES : "cle_employe (SCD2)"
    DIM_FOURNISSEUR ||--o{ FAIT_VENTES : "cle_fournisseur"
    DIM_CANAL       ||--o{ FAIT_VENTES : "cle_canal"
    DIM_GEOGRAPHIE  ||--o{ FAIT_VENTES : "cle_geographie_client"

    FAIT_VENTES {
        bigserial fait_id PK
        int       cle_date FK
        bigint    cle_produit FK
        bigint    cle_client FK
        bigint    cle_employe FK
        bigint    cle_fournisseur FK
        smallint  cle_canal FK
        bigint    cle_geographie_client FK
        bigint    commande_id "DD"
        smallint  numero_ligne "DD"
        numeric   quantite
        numeric   prix_unitaire
        numeric   cout_unitaire
        numeric   pct_remise
        numeric   montant_brut
        numeric   montant_remise
        numeric   montant_net   "= CA"
        numeric   montant_cout
        numeric   montant_marge "= marge"
    }
    DIM_DATE {
        int      cle_date PK "AAAAMMJJ"
        date     date_complete
        smallint annee
        smallint numero_trimestre
        smallint numero_mois
        varchar  nom_mois
        smallint jour_de_semaine
        boolean  est_weekend
        varchar  saison
    }
    DIM_PRODUIT {
        bigserial cle_produit PK
        bigint    produit_id "naturelle"
        varchar   nom_produit
        varchar   nom_groupe_produit
        varchar   nom_categorie_produit
        varchar   nom_ligne_produit
        int       fournisseur_id_naturel
        varchar   nom_fournisseur
        boolean   actif
    }
    DIM_CLIENT {
        bigserial cle_client PK
        bigint    client_id "naturelle"
        varchar   nom_complet
        char      sexe
        varchar   tranche_age
        varchar   groupe_client
        boolean   a_carte_fidelite
        varchar   nom_ville
        varchar   nom_pays
        varchar   nom_continent
        date      effectif_du   "SCD2"
        date      effectif_au   "SCD2"
        boolean   est_courant   "SCD2"
        char      hash_ligne    "sha256"
    }
    DIM_EMPLOYE {
        bigserial cle_employe PK
        bigint    employe_id "naturelle"
        varchar   nom_complet
        char      sexe
        varchar   tranche_age
        numeric   salaire
        varchar   tranche_salaire
        varchar   org_pays
        varchar   org_compagnie
        varchar   org_departement
        varchar   org_section
        varchar   org_groupe
        varchar   nom_manager
        date      date_embauche
        date      effectif_du   "SCD2"
        boolean   est_courant   "SCD2"
    }
    DIM_FOURNISSEUR {
        bigserial cle_fournisseur PK
        int       fournisseur_id "naturelle"
        varchar   nom_fournisseur
        varchar   nom_pays
        varchar   nom_continent
    }
    DIM_CANAL {
        smallserial cle_canal PK
        smallint    canal_id "naturelle"
        varchar     code_canal
        varchar     nom_canal
    }
    DIM_GEOGRAPHIE {
        bigserial cle_geographie PK
        int       ville_id "naturelle"
        varchar   nom_ville
        varchar   nom_region
        varchar   code_pays
        varchar   nom_pays
        varchar   nom_continent
    }
